--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" target="_blank" class="image featured"><img src="images/bmi.jpg" alt="BMI Calculator App" id="bmi_calculator"/></a>
 									<h3><a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" target="_blank">BMI Calculator App</a></h3>
 									<p class="project_desc">A simple BMI app with Python and Custom Tkinter to create a modern looking GUI.
-									<ul class="actions special">
+									<ul class="actions center">
 										<li><a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" class="button style1" target="_blank">View Project</a></li>
 									</ul>
 								</section>
@@ -85,7 +85,7 @@
 									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/coin_market_cap_webscraper.py" target="_blank" class="image featured"><img src="images/crypto.jpg" alt="Web Scraping with Python" id="web_scraping"/></a>
 									<h3><a href="https://github.com/andresceleste/portfolio_projects/blob/main/coin_market_cap_webscraper.py" target="_blank">Web Scraping with Python</a></h3>
 									<p class="project_desc">Scrape data using Coin MarketCap's API to analyze cryptocurrency data.
-									<ul class="actions special">
+									<ul class="actions center">
 										<li><a href="https://github.com/andresceleste/portfolio_projects/blob/main/coin_market_cap_webscraper.py" target="_blank" class="button style1">View Project</a></li>
 									</ul>
 								</section>
@@ -95,7 +95,7 @@
 									<a href="#" class="image featured"><img src="images/robot_framework.jpg" alt="Robot Framework Test Cases" id="robot_framework_project"/></a>
 									<h3><a href="#">Robot Framework</a></h3>
 									<p class="project_desc">Developed Test Cases using Robot Framework and Selenium.
-									<ul class="actions special">
+									<ul class="actions center">
 										<li><a href="#" class="button style1">View Project</a></li>
 									</ul>
 								</section>
@@ -105,7 +105,7 @@
 									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/data_cleaning_nashville_housing_data.sql" target="_blank" class="image featured"><img src="images/housing.jpg" alt="Data Cleaning in SQL" id="data_cleaning"/></a>
 									<h3><a href="https://github.com/andresceleste/portfolio_projects/blob/main/data_cleaning_nashville_housing_data.sql" target="_blank">Data Cleaning in SQL</a></h3>
 									<p class="project_desc">Preform Extract, Transform, Load (ETL) technique on raw housing data to make it more usable for analysis.
-									<ul class="actions special">
+									<ul class="actions center">
 										<li><a href="https://github.com/andresceleste/portfolio_projects/blob/main/data_cleaning_nashville_housing_data.sql" target="_blank" class="button style1">View Project</a></li>
 									</ul>
 								</section>
@@ -115,7 +115,7 @@
 									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/eda_covid_19_sql_queries.sql" target="_blank" class="image featured"><img src="images/covid.jpg" alt="Covid 19 Data Exploration" id="data_exploration"/></a>
 									<h3><a href="https://github.com/andresceleste/portfolio_projects/blob/main/eda_covid_19_sql_queries.sql" target="_blank">Covid 19 Data Exploration</a></h3>
 									<p class="project_desc">Exploratory Data Analysis (EDA) of Covid 19 data utilizing SQL.
-									<ul class="actions special">
+									<ul class="actions center">
 										<li><a href="https://github.com/andresceleste/portfolio_projects/blob/main/eda_covid_19_sql_queries.sql" target="_blank" class="button style1">View Project</a></li>
 									</ul>
 								</section>
@@ -125,7 +125,7 @@
 									<a href="https://public.tableau.com/views/SeattleAirBnBFullProject_17109798013570/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" target="_blank" class="image featured"><img src="images/tableau.jpg" alt="Tableau Dashboards" id="tableau_dashboards"/></a>
 									<h3><a href="https://public.tableau.com/views/SeattleAirBnBFullProject_17109798013570/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" target="_blank">Tableau Dashboards</a></h3>
 									<p class="project_desc">Tableau Dashboards for COVID 19 data analysis.
-									<ul class="actions special">
+									<ul class="actions center">
 										<li><a href="https://public.tableau.com/views/SeattleAirBnBFullProject_17109798013570/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" class="button style1" target="_blank">View Project</a></li>
 									</ul>
 								</section>
@@ -149,24 +149,41 @@
 									<section>
 										<p>Fill out the form below to send me a message directly from this website or click on the icons below to visit my profiles.</p>
 										<form action="https://formsubmit.co/98472a35ab82091372a717132af4e495" method="POST">
+											<!-- Honeypot -->
+											<input type="text" name="_honey" style="display: none;"/>
+
+<!--										<-- Disable Captcha	-->
+											<input type="hidden" name="_captcha" value="false">
+											<input type="hidden" name="_template" value="box">
+
 											<div class="row gtr-50">
 												<div class="col-6 col-12-small">
-													<input type="text" name="name" id="contact-name" placeholder="Name" />
+													<div class="input-wrapper">
+														<input type="text" name="Name" id="contact-name" placeholder="Name" required/>
+													</div>
+													<div class="input-wrapper">
+														<input type="text" name="Email" id="contact-email" placeholder="Email" required/>
+													</div>
+													<div class="input-wrapper">
+														<input type="text" name="Phone" id="contact-phone" placeholder="Phone Number" />
+													</div>
 												</div>
 												<div class="col-6 col-12-small">
-													<input type="text" name="email" id="contact-email" placeholder="Email" />
+													<div class="input-wrapper">
+														<textarea name="Message" id="contact-message" placeholder="Message" rows="5" required></textarea>
+													</div>
 												</div>
 												<div class="col-12">
-													<textarea name="message" id="contact-message" placeholder="Message" rows="4"></textarea>
-												</div>
-												<div class="col-12">
-													<ul class="actions">
+													<ul class="actions right">
 														<li><input type="submit" class="style1" value="Send" /></li>
 														<li><input type="reset" class="style2" value="Reset" /></li>
 													</ul>
 												</div>
 											</div>
 										</form>
+										<div id="success-message" style="display: none;">
+											<p>Thank you! Your message has been sent successfully.</p>
+										</div>
 									</section>
 
 							</div>
@@ -193,6 +210,7 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/backtotop.js"></script>
+			<script src="assets/js/success_message.js"></script>
 
 	</body>
 </html>
