--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 								<!-- Contact Form -->
 									<section>
 										<p>Fill out the form below to send me a message directly from this website or click on the icons below to visit my profiles.</p>
-										<form action="https://formsubmit.co/98472a35ab82091372a717132af4e495" method="POST">
+										<form id="contact-form" action="https://formsubmit.co/98472a35ab82091372a717132af4e495" method="POST">
 											<!-- Honeypot -->
 											<input type="text" name="_honey" style="display: none;"/>
 
