--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 								<li>
 									<a href="#projects">Projects</a>
 									<ul>
-										<li><a href="#data_cleaning">Data Cleaning in SQL</a></li>
-										<li><a href="#data_exploration">Covid 19 Data Exploration</a></li>
-										<li><a href="#tableau_dashboards">Tableau Dashboards</a></li>
-										<li><a href="#bmi_calculator">BMI Calulator App</a></li>
-										<li><a href="#web_scraping">Web Scraping with Python</a></li>
-										<li><a href="#robot_framework_project">Robot Framework Test Cases</a></li>
+										<li><a href="#data-cleaning">Data Cleaning in SQL</a></li>
+										<li><a href="#data-exploration">Covid 19 Data Exploration</a></li>
+										<li><a href="#tableau-dashboards">Tableau Dashboards</a></li>
+										<li><a href="#bmi-calculator">BMI Calulator App</a></li>
+										<li><a href="#web-scraping">Web Scraping with Python</a></li>
+										<li><a href="#robot-framework-project">Robot Framework Test Cases</a></li>
 									</ul>
 								</li>
 								<li><a href="#footer">Contact</a></li>
@@ -57,11 +57,12 @@
 						<header class="style1">
 							<h2>Welcome to my portfolio!</h2>
 							<p>
-								My name is Andres and I'm an experienced and proactive Software Automation Engineer with a strong background in software automation, software
-								testing methodologies, web development, data analysis, and application support. Proficient in software testing
-								processes, automated testing tools and frameworks, and creating test scripts.
+								I'm Andres, a proactive Software Automation Engineer with extensive experience in software automation,
+								testing methodologies, web development, data analysis, and application support. Throughout my career,
+								I've successfully implemented automated testing solutions, optimized software testing processes, and
+								contributed to the development of robust software applications.
 							</p>
-							<p>Below you will find a range of projects I've worked on. Feel free to check them out!</p>
+							<p>Below, you'll find a selection of projects that showcase my skills and expertise. Feel free to explore them, and don't hesitate to reach out if you have any questions or opportunities for collaboration.</p>
 					</div>
 				</section>
 
@@ -72,7 +73,7 @@
 						<div class="row aln-center">
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" target="_blank" class="image featured"><img src="images/bmi.jpg" alt="BMI Calculator App" id="bmi_calculator"/></a>
+									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" target="_blank" class="image featured"><img src="images/bmi.jpg" alt="BMI Calculator App" id="bmi-calculator"/></a>
 									<h3><a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" target="_blank">BMI Calculator App</a></h3>
 									<p class="project_desc">A simple BMI app with Python and Custom Tkinter to create a modern looking GUI.
 									<ul class="actions center">
@@ -82,7 +83,7 @@
 							</div>
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/coin_market_cap_webscraper.py" target="_blank" class="image featured"><img src="images/crypto.jpg" alt="Web Scraping with Python" id="web_scraping"/></a>
+									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/coin_market_cap_webscraper.py" target="_blank" class="image featured"><img src="images/crypto.jpg" alt="Web Scraping with Python" id="web-scraping"/></a>
 									<h3><a href="https://github.com/andresceleste/portfolio_projects/blob/main/coin_market_cap_webscraper.py" target="_blank">Web Scraping with Python</a></h3>
 									<p class="project_desc">Scrape data using Coin MarketCap's API to analyze cryptocurrency data.
 									<ul class="actions center">
@@ -92,7 +93,7 @@
 							</div>
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="#" class="image featured"><img src="images/robot_framework.jpg" alt="Robot Framework Test Cases" id="robot_framework_project"/></a>
+									<a href="#" class="image featured"><img src="images/robot_framework.jpg" alt="Robot Framework Test Cases" id="robot-framework-project"/></a>
 									<h3><a href="#">Robot Framework</a></h3>
 									<p class="project_desc">Developed Test Cases using Robot Framework and Selenium.
 									<ul class="actions center">
@@ -102,9 +103,9 @@
 							</div>
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/data_cleaning_nashville_housing_data.sql" target="_blank" class="image featured"><img src="images/housing.jpg" alt="Data Cleaning in SQL" id="data_cleaning"/></a>
+									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/data_cleaning_nashville_housing_data.sql" target="_blank" class="image featured"><img src="images/housing.jpg" alt="Data Cleaning in SQL" id="data-cleaning"/></a>
 									<h3><a href="https://github.com/andresceleste/portfolio_projects/blob/main/data_cleaning_nashville_housing_data.sql" target="_blank">Data Cleaning in SQL</a></h3>
-									<p class="project_desc">Preform Extract, Transform, Load (ETL) technique on raw housing data to make it more usable for analysis.
+									<p class="project_desc">Perform Extract, Transform, Load (ETL) technique on raw housing data to make it more usable for analysis.
 									<ul class="actions center">
 										<li><a href="https://github.com/andresceleste/portfolio_projects/blob/main/data_cleaning_nashville_housing_data.sql" target="_blank" class="button style1">View Project</a></li>
 									</ul>
@@ -112,7 +113,7 @@
 							</div>
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/eda_covid_19_sql_queries.sql" target="_blank" class="image featured"><img src="images/covid.jpg" alt="Covid 19 Data Exploration" id="data_exploration"/></a>
+									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/eda_covid_19_sql_queries.sql" target="_blank" class="image featured"><img src="images/covid.jpg" alt="Covid 19 Data Exploration" id="data-exploration"/></a>
 									<h3><a href="https://github.com/andresceleste/portfolio_projects/blob/main/eda_covid_19_sql_queries.sql" target="_blank">Covid 19 Data Exploration</a></h3>
 									<p class="project_desc">Exploratory Data Analysis (EDA) of Covid 19 data utilizing SQL.
 									<ul class="actions center">
@@ -122,9 +123,9 @@
 							</div>
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="https://public.tableau.com/views/SeattleAirBnBFullProject_17109798013570/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" target="_blank" class="image featured"><img src="images/tableau.jpg" alt="Tableau Dashboards" id="tableau_dashboards"/></a>
+									<a href="https://public.tableau.com/views/SeattleAirBnBFullProject_17109798013570/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" target="_blank" class="image featured"><img src="images/tableau.jpg" alt="Tableau Dashboards" id="tableau-dashboards"/></a>
 									<h3><a href="https://public.tableau.com/views/SeattleAirBnBFullProject_17109798013570/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" target="_blank">Tableau Dashboards</a></h3>
-									<p class="project_desc">Tableau Dashboards for COVID 19 data analysis.
+									<p class="project_desc">Tableau Dashboards for data analysis.
 									<ul class="actions center">
 										<li><a href="https://public.tableau.com/views/SeattleAirBnBFullProject_17109798013570/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" class="button style1" target="_blank">View Project</a></li>
 									</ul>
@@ -196,7 +197,7 @@
 							</ul>
 						</div>
 						<!-- Back to Top Button -->
-    					<button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">Back to Top</button>
+    					<button onclick="scrollToTop()" id="back-to-top-btn" title="Go to top">Back to Top</button>
 					</div>
 				</section>
 
@@ -209,8 +210,8 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="assets/js/backtotop.js"></script>
-			<script src="assets/js/successmessage.js"></script>
+			<script src="assets/js/back-to-top.js"></script>
+			<script src="assets/js/success-message.js"></script>
 
 	</body>
 </html>
