--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 								<li>
 									<a href="#projects">Projects</a>
 									<ul>
+										<li><a href="#web-scraping">Web Scraping with Python</a></li>
+										<li><a href="#bmi-calculator">BMI Calulator App</a></li>
+										<li><a href="#robot-framework-project">Robot Framework Test Cases</a></li>
 										<li><a href="#data-cleaning">Data Cleaning in SQL</a></li>
 										<li><a href="#data-exploration">Covid 19 Data Exploration</a></li>
 										<li><a href="#tableau-dashboards">Tableau Dashboards</a></li>
-										<li><a href="#bmi-calculator">BMI Calulator App</a></li>
-										<li><a href="#web-scraping">Web Scraping with Python</a></li>
-										<li><a href="#robot-framework-project">Robot Framework Test Cases</a></li>
 									</ul>
 								</li>
 								<li><a href="#footer">Contact</a></li>
@@ -63,6 +63,19 @@
 								contributed to the development of robust software applications.
 							</p>
 							<p>Below, you'll find a selection of projects that showcase my skills and expertise. Feel free to explore them, and don't hesitate to reach out if you have any questions or opportunities for collaboration.</p>
+							<div id="tech-stack">
+								<h2>Tech Stack:</h2>
+								<ul class="icon-list">
+									<li><i class="fab fa-python" style="color: #306998;" title="Python"></i></li>
+									<li><i class="fas fa-robot" style="color: #B02425;" title="Robot Framework"></i></li>
+									<li><i class="fas fa-database" style="color: #00758F;" title="SQL"></i></li>
+									<li><i class="fas fa-terminal" style="color: #000000;" title="Bash"></i></li>
+									<li><i class="fab fa-js-square" style="color: #F7DF1E;" title="JavaScript"></i></li>
+									<li><i class="fab fa-html5" style="color: #E34F26;" title="HTML5"></i></li>
+									<li><i class="fab fa-css3-alt" style="color: #1572B6;" title="CSS3"v></i></li>
+									<!-- Add more icons for other technologies -->
+								</ul>
+							</div>
 					</div>
 				</section>
 
@@ -73,21 +86,21 @@
 						<div class="row aln-center">
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" target="_blank" class="image featured"><img src="images/bmi.jpg" alt="BMI Calculator App" id="bmi-calculator"/></a>
-									<h3><a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" target="_blank">BMI Calculator App</a></h3>
-									<p class="project_desc">A simple BMI app with Python and Custom Tkinter to create a modern looking GUI.
-									<ul class="actions center">
-										<li><a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" class="button style1" target="_blank">View Project</a></li>
-									</ul>
-								</section>
-							</div>
-							<div class="col-4 col-12-medium">
-								<section class="project">
 									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/coin_market_cap_webscraper.py" target="_blank" class="image featured"><img src="images/crypto.jpg" alt="Web Scraping with Python" id="web-scraping"/></a>
 									<h3><a href="https://github.com/andresceleste/portfolio_projects/blob/main/coin_market_cap_webscraper.py" target="_blank">Web Scraping with Python</a></h3>
 									<p class="project_desc">Scrape data using Coin MarketCap's API to analyze cryptocurrency data.
 									<ul class="actions center">
 										<li><a href="https://github.com/andresceleste/portfolio_projects/blob/main/coin_market_cap_webscraper.py" target="_blank" class="button style1">View Project</a></li>
+									</ul>
+								</section>
+							</div>
+							<div class="col-4 col-12-medium">
+								<section class="project">
+									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" target="_blank" class="image featured"><img src="images/bmi.jpg" alt="BMI Calculator App" id="bmi-calculator"/></a>
+									<h3><a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" target="_blank">BMI Calculator App</a></h3>
+									<p class="project_desc">A simple BMI app with Python and Custom Tkinter to create a modern looking GUI.
+									<ul class="actions center">
+										<li><a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" class="button style1" target="_blank">View Project</a></li>
 									</ul>
 								</section>
 							</div>
@@ -148,7 +161,7 @@
 
 								<!-- Contact Form -->
 									<section>
-										<p>Fill out the form below to send me a message directly from this website or click on the icons below to visit my profiles.</p>
+										<p>Fill out the form below to send me a message directly from this website or click on the icons to visit my profiles.</p>
 										<form id="contact-form" action="https://formsubmit.co/98472a35ab82091372a717132af4e495" method="POST">
 											<!-- Honeypot -->
 											<input type="text" name="_honey" style="display: none;"/>
