--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
 							</div>
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="#" class="image featured"><img src="images/robot_framework.jpg" alt="Robot Framework Test Cases" id="robot-framework-project"/></a>
-									<h3><a href="#">Robot Framework</a></h3>
+									<a href="https://github.com/andresceleste/web_automation" class="image featured"><img src="images/robot_framework.jpg" alt="Robot Framework Test Cases" id="robot-framework-project"/></a>
+									<h3><a href="https://github.com/andresceleste/web_automation">Robot Framework</a></h3>
 									<p class="project_desc">Developed Test Cases using Robot Framework and Selenium.
 									<ul class="actions center">
-										<li><a href="#" class="button style1">View Project</a></li>
+										<li><a href="https://github.com/andresceleste/web_automation" class="button style1">View Project</a></li>
 									</ul>
 								</section>
 							</div>
