--- a/index.html
+++ b/index.html
@@ -100,17 +100,17 @@
 									<h3><a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" target="_blank">BMI Calculator App</a></h3>
 									<p class="project_desc">A simple BMI app with Python and Custom Tkinter to create a modern looking GUI.
 									<ul class="actions center">
-										<li><a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" class="button style1" target="_blank">View Project</a></li>
+										<li><a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" target="_blank class="button style1"">View Project</a></li>
 									</ul>
 								</section>
 							</div>
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="https://github.com/andresceleste/web_automation" class="image featured"><img src="images/robot_framework.jpg" alt="Robot Framework Test Cases" id="robot-framework-project"/></a>
-									<h3><a href="https://github.com/andresceleste/web_automation">Robot Framework</a></h3>
+									<a href="https://github.com/andresceleste/web_automation" target="_blank" class="image featured"><img src="images/robot_framework.jpg" alt="Robot Framework Test Cases" id="robot-framework-project"/></a>
+									<h3><a href="https://github.com/andresceleste/web_automation" target="_blank">Robot Framework</a></h3>
 									<p class="project_desc">Developed Test Cases using Robot Framework and Selenium.
 									<ul class="actions center">
-										<li><a href="https://github.com/andresceleste/web_automation" class="button style1">View Project</a></li>
+										<li><a href="https://github.com/andresceleste/web_automation" target="_blank" class="button style1">View Project</a></li>
 									</ul>
 								</section>
 							</div>
@@ -140,7 +140,7 @@
 									<h3><a href="https://public.tableau.com/views/SeattleAirBnBFullProject_17109798013570/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" target="_blank">Tableau Dashboards</a></h3>
 									<p class="project_desc">Tableau Dashboards for data analysis.
 									<ul class="actions center">
-										<li><a href="https://public.tableau.com/views/SeattleAirBnBFullProject_17109798013570/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" class="button style1" target="_blank">View Project</a></li>
+										<li><a href="https://public.tableau.com/views/SeattleAirBnBFullProject_17109798013570/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" target="_blank" class="button style1">View Project</a></li>
 									</ul>
 								</section>
 							</div>
