--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 							<p>Portfolio</p>
 							<nav>
 								<ul class="social-icons">
-									<li><a href="https://www.linkedin.com/in/andres-celeste-25562912a" target="_blank" class="icon brands fab fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/andresceleste" target="_blank" class="icon brands fab fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/andres-celeste-25562912a" target="_blank" rel="noopener" class="icon brands fab fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/andresceleste" target="_blank" rel="noopener" class="icon brands fab fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</nav>
 						</div>
@@ -86,61 +86,96 @@
 						<div class="row aln-center">
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/coin_market_cap_webscraper.py" target="_blank" class="image featured"><img src="images/crypto.jpg" alt="Web Scraping with Python" id="web-scraping"/></a>
-									<h3><a href="https://github.com/andresceleste/portfolio_projects/blob/main/coin_market_cap_webscraper.py" target="_blank">Web Scraping with Python</a></h3>
-									<p class="project_desc">Scrape data using Coin MarketCap's API to analyze cryptocurrency data.
+									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/coin_market_cap_webscraper.py" target="_blank" rel="noopener" rel="noopener" class="image featured">
+										<img src="images/crypto.jpg" alt="Web Scraping with Python" id="web-scraping"/></a>
+									<h3>
+										<a href="https://github.com/andresceleste/portfolio_projects/blob/main/coin_market_cap_webscraper.py" target="_blank" rel="noopener">Web Scraping with Python</a>
+									</h3>
+									<p class="project-description">Scrape data using Coin MarketCap's API to analyze cryptocurrency data.
 									<ul class="actions center">
-										<li><a href="https://github.com/andresceleste/portfolio_projects/blob/main/coin_market_cap_webscraper.py" target="_blank" class="button style1">View Project</a></li>
+										<li>
+											<a href="https://github.com/andresceleste/portfolio_projects/blob/main/coin_market_cap_webscraper.py" target="_blank" rel="noopener" class="button style1">View Project</a>
+										</li>
 									</ul>
 								</section>
 							</div>
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" target="_blank" class="image featured"><img src="images/bmi.jpg" alt="BMI Calculator App" id="bmi-calculator"/></a>
-									<h3><a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" target="_blank">BMI Calculator App</a></h3>
-									<p class="project_desc">A simple BMI app with Python and Custom Tkinter to create a modern looking GUI.
+									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" target="_blank" rel="noopener" class="image featured">
+										<img src="images/bmi.jpg" alt="BMI Calculator App" id="bmi-calculator"/>
+									</a>
+									<h3>
+										<a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" target="_blank" rel="noopener">BMI Calculator App</a>
+									</h3>
+									<p class="project-description">A simple BMI app with Python and Custom Tkinter to create a modern looking GUI.
 									<ul class="actions center">
-										<li><a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" target="_blank class="button style1"">View Project</a></li>
+										<li>
+											<a href="https://github.com/andresceleste/portfolio_projects/blob/main/bmi_calculator.py" class="button style1" target="_blank" rel="noopener">View Project</a>
+										</li>
 									</ul>
 								</section>
 							</div>
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="https://github.com/andresceleste/web_automation" target="_blank" class="image featured"><img src="images/robot_framework.jpg" alt="Robot Framework Test Cases" id="robot-framework-project"/></a>
-									<h3><a href="https://github.com/andresceleste/web_automation" target="_blank">Robot Framework</a></h3>
-									<p class="project_desc">Developed Test Cases using Robot Framework and Selenium.
+									<a href="https://github.com/andresceleste/web_automation" class="image featured">
+										<img src="images/robot_framework.jpg" alt="Robot Framework Test Cases" id="robot-framework-project"/>
+									</a>
+									<h3>
+										<a href="https://github.com/andresceleste/web_automation">Robot Framework</a>
+									</h3>
+									<p class="project-description">Developed Test Cases using Robot Framework and Selenium.
 									<ul class="actions center">
-										<li><a href="https://github.com/andresceleste/web_automation" target="_blank" class="button style1">View Project</a></li>
+										<li>
+											<a href="https://github.com/andresceleste/web_automation" class="button style1">View Project</a>
+										</li>
 									</ul>
 								</section>
 							</div>
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/data_cleaning_nashville_housing_data.sql" target="_blank" class="image featured"><img src="images/housing.jpg" alt="Data Cleaning in SQL" id="data-cleaning"/></a>
-									<h3><a href="https://github.com/andresceleste/portfolio_projects/blob/main/data_cleaning_nashville_housing_data.sql" target="_blank">Data Cleaning in SQL</a></h3>
-									<p class="project_desc">Perform Extract, Transform, Load (ETL) technique on raw housing data to make it more usable for analysis.
+									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/data_cleaning_nashville_housing_data.sql" target="_blank" rel="noopener" class="image featured">
+										<img src="images/housing.jpg" alt="Data Cleaning in SQL" id="data-cleaning"/>
+									</a>
+									<h3>
+										<a href="https://github.com/andresceleste/portfolio_projects/blob/main/data_cleaning_nashville_housing_data.sql" target="_blank" rel="noopener">Data Cleaning in SQL</a>
+									</h3>
+									<p class="project-description">Perform Extract, Transform, Load (ETL) technique on raw housing data to make it more usable for analysis.
 									<ul class="actions center">
-										<li><a href="https://github.com/andresceleste/portfolio_projects/blob/main/data_cleaning_nashville_housing_data.sql" target="_blank" class="button style1">View Project</a></li>
+										<li>
+											<a href="https://github.com/andresceleste/portfolio_projects/blob/main/data_cleaning_nashville_housing_data.sql" target="_blank" rel="noopener" class="button style1">View Project</a>
+										</li>
 									</ul>
 								</section>
 							</div>
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/eda_covid_19_sql_queries.sql" target="_blank" class="image featured"><img src="images/covid.jpg" alt="Covid 19 Data Exploration" id="data-exploration"/></a>
-									<h3><a href="https://github.com/andresceleste/portfolio_projects/blob/main/eda_covid_19_sql_queries.sql" target="_blank">Covid 19 Data Exploration</a></h3>
-									<p class="project_desc">Exploratory Data Analysis (EDA) of Covid 19 data utilizing SQL.
+									<a href="https://github.com/andresceleste/portfolio_projects/blob/main/eda_covid_19_sql_queries.sql" target="_blank" rel="noopener" class="image featured">
+										<img src="images/covid.jpg" alt="Covid 19 Data Exploration" id="data-exploration"/>
+									</a>
+									<h3>
+										<a href="https://github.com/andresceleste/portfolio_projects/blob/main/eda_covid_19_sql_queries.sql" target="_blank" rel="noopener">Covid 19 Data Exploration</a>
+									</h3>
+									<p class="project-description">Exploratory Data Analysis (EDA) of Covid 19 data utilizing SQL.
 									<ul class="actions center">
-										<li><a href="https://github.com/andresceleste/portfolio_projects/blob/main/eda_covid_19_sql_queries.sql" target="_blank" class="button style1">View Project</a></li>
+										<li>
+											<a href="https://github.com/andresceleste/portfolio_projects/blob/main/eda_covid_19_sql_queries.sql" target="_blank" rel="noopener" class="button style1">View Project</a>
+										</li>
 									</ul>
 								</section>
 							</div>
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="https://public.tableau.com/views/SeattleAirBnBFullProject_17109798013570/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" target="_blank" class="image featured"><img src="images/tableau.jpg" alt="Tableau Dashboards" id="tableau-dashboards"/></a>
-									<h3><a href="https://public.tableau.com/views/SeattleAirBnBFullProject_17109798013570/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" target="_blank">Tableau Dashboards</a></h3>
-									<p class="project_desc">Tableau Dashboards for data analysis.
+									<a href="https://public.tableau.com/views/SeattleAirBnBFullProject_17109798013570/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" target="_blank" rel="noopener" class="image featured">
+										<img src="images/tableau.jpg" alt="Tableau Dashboards" id="tableau-dashboards"/>
+									</a>
+									<h3>
+										<a href="https://public.tableau.com/views/SeattleAirBnBFullProject_17109798013570/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" target="_blank" rel="noopener">Tableau Dashboards</a>
+									</h3>
+									<p class="project-description">Tableau Dashboards for data analysis.
 									<ul class="actions center">
-										<li><a href="https://public.tableau.com/views/SeattleAirBnBFullProject_17109798013570/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" target="_blank" class="button style1">View Project</a></li>
+										<li>
+											<a href="https://public.tableau.com/views/SeattleAirBnBFullProject_17109798013570/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" class="button style1" target="_blank" rel="noopener">View Project</a>
+										</li>
 									</ul>
 								</section>
 							</div>
@@ -205,8 +240,8 @@
 						<div id="copyright">
 							<ul>
 								<li>&copy; 2024 Andres Celeste. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-								<li><a href="https://www.linkedin.com/in/andres-celeste-25562912a" target="_blank" class="icon brands fab fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://github.com/andresceleste" target="_blank" class="icon brands fab fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/andres-celeste-25562912a" target="_blank" rel="noopener" class="icon brands fab fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/andresceleste" target="_blank" rel="noopener" class="icon brands fab fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						</div>
 						<!-- Back to Top Button -->
