--- a/pages/automation.html
+++ b/pages/automation.html
@@ -30,12 +30,12 @@
                 <li>
                     <a href="../index.html#projects">Projects</a>
                     <ul>
-                        <li><a href="index.html#web-scraping">Web Scraping with Python</a></li>
-                        <li><a href="index.html#bmi-calculator">BMI Calulator App</a></li>
-                        <li><a href="#">Automation</a></li>
-                        <li><a href="index.html#data-cleaning">Data Cleaning in SQL</a></li>
-                        <li><a href="index.html#data-exploration">Covid 19 Data Exploration</a></li>
-                        <li><a href="index.html#tableau-dashboards">Tableau Dashboards</a></li>
+                        <li><a href="#main">Automation</a></li>
+                        <li><a href="../index.html#web-scraping">Web Scraping with Python</a></li>
+                        <li><a href="../index.html#bmi-calculator">BMI Calulator App</a></li>
+                        <li><a href="../index.html#data-cleaning">Data Cleaning in SQL</a></li>
+                        <li><a href="../index.html#data-exploration">Covid 19 Data Exploration</a></li>
+                        <li><a href="../index.html#tableau-dashboards">Tableau Dashboards</a></li>
                     </ul>
                 </li>
                 <li><a href="#footer">Contact</a></li>
